--- a/coreos-base/oem-packet/files/cloud-config.yml
+++ b/coreos-base/oem-packet/files/cloud-config.yml
@@ -28,4 +28,4 @@ coreos:
     name: Packet
     version-id: @@OEM_VERSION_ID@@
     home-url: https://packet.net
-    bug-report-url: https://github.com/coreos/bugs/issues
+    bug-report-url: https://issues.coreos.com
